# python_template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README.ru.md  pyproject.toml
docs/: coding_rules.md
script/: bootstrap.py
src/app/: __init__.py  __main__.py
tests/: test_main.py
